--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,10 +201,11 @@ be temporary, and you can try again later.</li>
     <string name="pocket_home_a11y_tile_focused">Video recommendation by %1$s</string>
 
     <string name="pocket_video_feed_recommended_videos_title">Recommended videos</string>
-    <!-- Text displayed when the Pocket video recommendations feed failed to load. -->
-    <string name="pocket_video_feed_failed_to_load">Something went wrong while loading the feed.</string>
+    <!-- Text displayed when the Pocket video recommendations feed failed to load.
+    %1$s will be replaced with the Pocket brand name. -->
+    <string name="pocket_video_feed_failed_to_load">Hmm. We\'re having trouble displaying video recommendations by %1$s.</string>
     <!-- Text displayed on a button to reload the Pocket video recommendations feed if it failed to load. -->
-    <string name="pocket_video_feed_reload_button">Reload</string>
+    <string name="pocket_video_feed_reload_button">Try again</string>
     <!-- Spoken to screen reader users to describe how to navigate on the Pocket video recommendations feed. -->
     <string name="pocket_video_feed_a11y_navigation">Use left and right to move between videos</string>
     <!-- Spoken to screen reader users when they to describe a Pocket video recommendation they have focused.
