--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
+  <string name="pocket_brand_name">Pocket</string>
   <string name="action_cancel">Annuler</string>
   <string name="action_ok">OK</string>
   <string name="urlbar_hint">Recherche ou adresse</string>
@@ -54,7 +55,6 @@
   <string name="your_rights_content3"><![CDATA["Il ne vous est cédé aucun droit ou licence sur les marques déposées de la Fondation Mozilla ou de tiers, y compris sur les noms et logos de Mozilla, Firefox ou %1$s. Des informations complémentaires peuvent être consultées "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">ici</a>.]]></string>
   <string name="your_rights_content4"><![CDATA["Le code source complémentaire pour %1$s est disponible sous différentes "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">licences</a>" libres et open source."]]></string>
   <string name="your_rights_content5"><![CDATA["%1$s utilise aussi des listes de blocage fournies par Disconnect Inc, en tant que créations sous la licence "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">GNU General Public License v3</a>" et qui sont disponibles "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">ici</a>.]]></string>
-  <string name="menu_drawer_home">Accueil</string>
   <string name="settings_cookies_dialog_title">Effacer les cookies et les données de sites</string>
   <string name="settings_cookies_dialog_content">En cliquant sur « Effacer maintenant », vous effacerez toutes les données de sites et tous les cookies stockés par Firefox pour Fire TV. Cette action peut vous déconnecter de certains sites et supprimer du contenu web disponible hors connexion.</string>
   <string name="turbo_mode">Mode turbo</string>
@@ -67,4 +67,12 @@
   <string name="pin_label">Épingler à l’écran d’accueil</string>
   <string name="notification_pinned_site">Épinglé à l’écran d’accueil Firefox TV</string>
   <string name="notification_unpinned_site">Retiré de l’écran d’accueil Firefox TV</string>
+  <string name="pocket_home_tutorial_title">Découvrez des vidéos recommandées par %1$s</string>
+  <string name="pocket_home_tutorial_dismiss_button">J’ai compris</string>
+  <string name="pocket_home_a11y_tile_focused">Recommandations de vidéos par %1$s</string>
+  <string name="pocket_video_feed_recommended_videos_title">Vidéos recommandées</string>
+  <string name="pocket_video_feed_failed_to_load">Hum, nous ne parvenons pas à afficher les recommandations de vidéos par %1$s.</string>
+  <string name="pocket_video_feed_reload_button">Réessayer</string>
+  <string name="pocket_video_feed_a11y_navigation">Utilisez les touches gauche et droite pour naviguer parmi les vidéos</string>
+  <string name="pocket_video_feed_a11y_feed_item_focused">%1$s sur %2$s</string>
 </resources>
