--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -69,8 +69,12 @@
   <string name="notification_pinned_site">Fixado à tela inicial do Firefox TV</string>
   <string name="notification_unpinned_site">Removido da tela inicial do Firefox TV</string>
   <string name="pocket_home_tutorial_title">Introduzindo os vídeos recomendados pelo %1$s</string>
+  <string name="pocket_home_tutorial_description">Os vídeos mais interessantes da internet. Recomendados pelo %1$s, agora parte da Mozilla.</string>
   <string name="pocket_home_tutorial_dismiss_button">Ok, entendi</string>
+  <string name="pocket_home_a11y_tile_focused">Recomendação de vídeo do %1$s</string>
   <string name="pocket_video_feed_recommended_videos_title">Vídeos recomendados</string>
+  <string name="pocket_video_feed_failed_to_load">Hmm. Nós estamos com problemas na exibição das recomendações de vídeos do %1$s.</string>
   <string name="pocket_video_feed_reload_button">Tentar novamente</string>
+  <string name="pocket_video_feed_a11y_navigation">Utilize esquerda ou direita para mover-se entre os vídeos</string>
   <string name="pocket_video_feed_a11y_feed_item_focused">%1$s em %2$s</string>
 </resources>
