Import translations from L10N repository (20180605-172823)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">Effacer les cookies et les données de sites</string>
   <string name="settings_cookies_dialog_content">En cliquant sur « Effacer maintenant », vous effacerez toutes les données de sites et tous les cookies stockés par Firefox pour Fire TV. Cette action peut vous déconnecter de certains sites et supprimer du contenu web disponible hors connexion.</string>
   <string name="turbo_mode">Mode turbo</string>
+  <string name="turbo_mode_enabled_toast">Mode turbo activé</string>
+  <string name="turbo_mode_disabled_toast">Mode turbo désactivé</string>
   <string name="onboarding_turbo_mode_title">Le mode turbo vous permet de naviguer plus rapidement</string>
   <string name="onboarding_turbo_mode_body">Le mode turbo bloque automatiquement les traqueurs et les publicités pour que les pages web se chargent plus vite. S’il y a un hic (comme un site web qui ne fonctionne pas comme vous l’espériez), il vous suffit de désactiver le mode turbo.</string>
   <string name="onboarding_turbo_mode_button_on">Laisser le mode turbo activé</string>
   <string name="onboarding_turbo_mode_button_off">Désactiver le mode turbo</string>
+  <string name="turbo_mode_disable_a11y">Désactiver le mode turbo</string>
+  <string name="turbo_mode_enable_a11y">Activer le mode turbo</string>
   <string name="homescreen_unpin_tutorial_toast">Effectuez un appui long sur SELECT pour détacher cet élément de l’écran d’accueil</string>
   <string name="homescreen_tile_remove">Retirer</string>
-  <string name="nav_close_hint">Fermer</string>
+  <string name="homescreen_unpin_a11y">Détacher</string>
+  <string name="homescreen_title">Écran d’accueil</string>
   <string name="pin_label">Épingler à l’écran d’accueil</string>
+  <string name="notification_pinned_general">Épinglé à l’écran d’accueil</string>
+  <string name="notification_unpinned_general">Retiré de l’écran d’accueil</string>
   <string name="notification_pinned_site">Épinglé à l’écran d’accueil Firefox TV</string>
   <string name="notification_unpinned_site">Retiré de l’écran d’accueil Firefox TV</string>
   <string name="pocket_home_tutorial_title">Découvrez des vidéos recommandées par %1$s</string>
