--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">Elimina tutti i cookie e i dati dei siti web</string>
   <string name="settings_cookies_dialog_content">Selezionando “Elimina adesso” verranno eliminati tutti i cookie e i dati dei siti web salvati in Firefox per Firefox TV. Questo potrebbe disconnettere l’utente da siti web o rimuovere contenuti per l’utilizzo non in linea.</string>
   <string name="turbo_mode">Modalità turbo</string>
+  <string name="turbo_mode_enabled_toast">Modalità turbo attivata</string>
+  <string name="turbo_mode_disabled_toast">Modalità turbo disattivata</string>
   <string name="onboarding_turbo_mode_title">La modalità turbo ti permette di navigare più velocemente</string>
   <string name="onboarding_turbo_mode_body">La modalità turbo blocca in automatico elementi traccianti e pubblicità per caricare le pagine più rapidamente. Se incontri un problema, come un sito che non funziona come dovrebbe, basterà disattivare la modalità turbo.</string>
   <string name="onboarding_turbo_mode_button_on">Mantieni attiva modalità turbo</string>
   <string name="onboarding_turbo_mode_button_off">Disattiva modalità turbo</string>
+  <string name="turbo_mode_disable_a11y">Disattiva modalità turbo</string>
+  <string name="turbo_mode_enable_a11y">Attiva modalità turbo</string>
   <string name="homescreen_unpin_tutorial_toast">Per sbloccare un elemento nella pagina principale tieni premuto SELECT</string>
   <string name="homescreen_tile_remove">Rimuovi</string>
-  <string name="nav_close_hint">Chiudi</string>
+  <string name="homescreen_unpin_a11y">Rimuovi dalla bacheca</string>
+  <string name="homescreen_title">Schermata principale</string>
   <string name="pin_label">Fissa alla schermata principale</string>
+  <string name="notification_pinned_general">Fissato alla schermata principale</string>
+  <string name="notification_unpinned_general">Rimosso dalla schermata principale</string>
   <string name="notification_pinned_site">Fissato alla schermata principale di Firefox TV</string>
   <string name="notification_unpinned_site">Rimosso dalla schermata principale di Firefox TV</string>
   <string name="pocket_home_tutorial_title">Ti presentiamo i video consigliati da %1$s</string>
