--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">Alle Cookies und Websitedaten entfernen</string>
   <string name="settings_cookies_dialog_content">Jetzt leeren löscht alle Cookies und Websitedaten, die Firefox gespeichert hat. Dadurch werden Sie wahrscheinlich von Websites abgemeldet und Offline-Webinhalte werden gelöscht.</string>
   <string name="turbo_mode">Turbo-Modus</string>
+  <string name="turbo_mode_enabled_toast">Turbo-Modus aktiviert</string>
+  <string name="turbo_mode_disabled_toast">Turbo-Modus deaktiviert</string>
   <string name="onboarding_turbo_mode_title">Der Turbo-Modus hilft Ihnen, schneller zu surfen</string>
   <string name="onboarding_turbo_mode_body">Der Turbo-Modus blockiert automatisch Tracker und Anzeigen, damit Sie schneller ans Ziel kommen. Wenn es ein Problem gibt – wie bei einer Website, die sich nicht so verhält, wie Sie es erwarten – schalten Sie einfach den Turbo-Modus aus.</string>
   <string name="onboarding_turbo_mode_button_on">Turbo-Modus aktiviert lassen</string>
   <string name="onboarding_turbo_mode_button_off">Turbo-Modus deaktivieren</string>
+  <string name="turbo_mode_disable_a11y">Turbo-Modus deaktivieren</string>
+  <string name="turbo_mode_enable_a11y">Turbo-Modus aktivieren</string>
   <string name="homescreen_unpin_tutorial_toast">Drücken und halten Sie AUSWÄHLEN zum Ablösen vom Startbildschirm</string>
   <string name="homescreen_tile_remove">Entfernen</string>
-  <string name="nav_close_hint">Schließen</string>
+  <string name="homescreen_unpin_a11y">Ablösen</string>
+  <string name="homescreen_title">Startbildschirm</string>
   <string name="pin_label">An Startbildschirm anheften</string>
+  <string name="notification_pinned_general">Am Startbildschirm angeheftet</string>
+  <string name="notification_unpinned_general">Vom Startbildschirm entfernt</string>
   <string name="notification_pinned_site">Am Firefox-TV-Startbildschirm angeheftet</string>
   <string name="notification_unpinned_site">Vom Firefox-TV-Startbildschirm entfernt</string>
   <string name="pocket_home_tutorial_title">Hier kommen von %1$s empfohlene Videos</string>
