--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">Limpiar todas las cookies y datos del sitio</string>
   <string name="settings_cookies_dialog_content">Seleccionar \"Limpiar ahora\" limpiará todas las cookies y datos del sitio guardados por Firefox. Esto puede desconectarle de sitios web y eliminar el contenido web sin conexión.</string>
   <string name="turbo_mode">Modo turbo</string>
+  <string name="turbo_mode_enabled_toast">Se activó el modo Turbo</string>
+  <string name="turbo_mode_disabled_toast">Se desactivó el modo Turbo</string>
   <string name="onboarding_turbo_mode_title">El modo turbo te ayuda a navegar más rápido</string>
   <string name="onboarding_turbo_mode_body">El modo turbo bloquea automáticamente rastreadores y anuncios para ayudarte a llegar más rápido a donde vas. Si hay un bache de velocidad, como un sitio que no se comporta como esperabas, solo tienes que desactivar el modo turbo.</string>
   <string name="onboarding_turbo_mode_button_on">Mantener activado el modo turbo</string>
   <string name="onboarding_turbo_mode_button_off">Desactivar el modo turbo</string>
+  <string name="turbo_mode_disable_a11y">Desactivar el modo turbo</string>
+  <string name="turbo_mode_enable_a11y">Activar el modo turbo</string>
   <string name="homescreen_unpin_tutorial_toast">Mantén presionado SELECT para desanclarlo de la pantalla de inicio</string>
   <string name="homescreen_tile_remove">Eliminar</string>
-  <string name="nav_close_hint">Cerrar</string>
+  <string name="homescreen_unpin_a11y">Soltar</string>
+  <string name="homescreen_title">Pantalla de inicio</string>
   <string name="pin_label">Fijar a la pantalla inicio</string>
+  <string name="notification_pinned_general">Se fijó a la pantalla de inicio</string>
+  <string name="notification_unpinned_general">Se eliminó de la pantalla de inicio</string>
   <string name="notification_pinned_site">FIjar a la pantalla de inicio de Firefox TV</string>
   <string name="notification_unpinned_site">Eliminar de la pantalla de inicio de Firefox TV</string>
   <string name="pocket_home_tutorial_title">Presentando vídeos recomendados por %1$s</string>
