--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">すべての Cookie とサイトデータの消去</string>
   <string name="settings_cookies_dialog_content">[今すぐ消去] を選択すると Firefox for Fire TV に保存されたすべての Cookie とサイトデータが消去されます。ウェブサイトからログアウトし、オフライン作業用のウェブページが削除されます。</string>
   <string name="turbo_mode">ターボモード</string>
+  <string name="turbo_mode_enabled_toast">ターボモード有効</string>
+  <string name="turbo_mode_disabled_toast">ターボモード無効</string>
   <string name="onboarding_turbo_mode_title">ターボモードはより速くブラウズするのに役立ちます</string>
   <string name="onboarding_turbo_mode_body">ターボモードは自動的にトラッカーと広告をブロックし、より速くブラウズするのを手助けします。 サイトが期待通りに動作しないなど問題が見られる場合は、ターボモードを無効化してください。</string>
   <string name="onboarding_turbo_mode_button_on">ターボモードを有効のままにする</string>
   <string name="onboarding_turbo_mode_button_off">ターボモードを無効にする</string>
+  <string name="turbo_mode_disable_a11y">ターボモードを無効にする</string>
+  <string name="turbo_mode_enable_a11y">ターボモードを有効にする</string>
   <string name="homescreen_unpin_tutorial_toast">ホーム画面からピン留めを外すには [選択] ボタンを長押ししてください</string>
   <string name="homescreen_tile_remove">削除</string>
-  <string name="nav_close_hint">閉じる</string>
+  <string name="homescreen_unpin_a11y">ピン留めを外す</string>
+  <string name="homescreen_title">ホーム画面</string>
   <string name="pin_label">ホーム画面にピン留め</string>
+  <string name="notification_pinned_general">ホーム画面にピン留めしました</string>
+  <string name="notification_unpinned_general">ホーム画面から削除しました</string>
   <string name="notification_pinned_site">Firefox TV のホーム画面にピン留めしました</string>
   <string name="notification_unpinned_site">Firefox TV のホーム画面から削除しました</string>
   <string name="pocket_home_tutorial_title">%1$s からおすすめの動画を紹介します</string>
