--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -58,14 +58,21 @@
   <string name="settings_cookies_dialog_title">清除所有 Cookie 和站点数据</string>
   <string name="settings_cookies_dialog_content">选择“立即清除”将清除 Firefox 存储的所有 Cookie 和站点数据。这可能使您退出网站的登录，以及删除离线的网站内容。</string>
   <string name="turbo_mode">加速模式</string>
+  <string name="turbo_mode_enabled_toast">已启用加速模式</string>
+  <string name="turbo_mode_disabled_toast">已禁用加速模式</string>
   <string name="onboarding_turbo_mode_title">加速模式下浏览更快更轻巧</string>
   <string name="onboarding_turbo_mode_body">加速模式会自动拦截跟踪器与广告，访问网站更迅捷。若您发现网站无法正常工作，请退出加速模式。</string>
   <string name="onboarding_turbo_mode_button_on">保持加速模式启用</string>
   <string name="onboarding_turbo_mode_button_off">退出加速模式</string>
+  <string name="turbo_mode_disable_a11y">已关闭加速模式</string>
+  <string name="turbo_mode_enable_a11y">已打开加速模式</string>
   <string name="homescreen_unpin_tutorial_toast">长按 SELECT 键从主屏幕取消固定</string>
   <string name="homescreen_tile_remove">移除</string>
-  <string name="nav_close_hint">关闭</string>
+  <string name="homescreen_unpin_a11y">取消固定</string>
+  <string name="homescreen_title">主屏幕</string>
   <string name="pin_label">固定到主屏幕</string>
+  <string name="notification_pinned_general">已固定到主屏幕</string>
+  <string name="notification_unpinned_general">已从主屏幕中移除</string>
   <string name="notification_pinned_site">已固定到 Firefox TV 主屏幕</string>
   <string name="notification_unpinned_site">已从 Firefox TV 主屏幕移除</string>
   <string name="pocket_home_tutorial_title">介绍由“%1$s”推荐的视频</string>
